2024-12-18  Björn Esser  <besser82 at fedoraproject.org>

	libnss_tcb: Initialize or rewind dirstream from inside setspent(3).
	On first call to setspent(3) initialize the directory stream properly;
	on subsequent calls use rewinddir(3) to reset the position of the
	directory stream to the beginning of the directory, and also update
	the existing directory stream to refer to the current state of the
	underlying directory it operates on.  As all internal functions are
	operating on thread-local storage now, this operation will be safe,
	since it will emit no effects outside of the thread calling the
	setspent(3) function itself.
	* libs/nss.c (_nss_tcb_setspent): Initialize or rewind dirstream.
	(_nss_tcb_getspent_r): Move initialization of the dirstream to
	_nss_tcb_setspent.

	libtcb: Add versioning to exported symbols.
	This change is implemented for adding some interfaces to libtcb to
	give it a more consumer friendly API and thus makes porting existing
	applications to be TCB aware easier.
	* libs/libtcb.map: Declare version for exported symbols.

	Add an option to omit the PAM module during build and install.
	This may be needed in distribution packages when preparing a
	bootstrap environment for new architectures.
	* Make.defs: Add OMIT_PAM_MODULE flag.
	* Makefile: Do not build/install the pam module if the
	OMIT_PAM_MODULE flag is set.

	* pam_tcb/Makefile: Move PAM_SO_SUFFIX to Make.defs.
	* Make.defs: Likewise.

2024-12-12  Björn Esser  <besser82 at fedoraproject.org>

	libtcb: Use thread-local storage for tcb_drop_priv and tcb_gain_priv.
	tcb_drop_priv and tcb_gain_priv now use per-thread storage areas
	for their operations, allocated upon the first call in each thread
	that uses them.  This makes it safe to call these functions from
	multiple threads simultaneously.
	The introduction of this feature is a safety net against sloppy
	coding.  Programs are still strongly encouraged to use the reentrant
	functions tcb_drop_priv_r and tcb_gain_priv_r instead.